[package]
name = "elastic-test-resource-management-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.32.0", features = ["full"] }
axum = "0.6.20"
config = "0.13.3"
dotenv = "0.15"
spdlog-rs = "0.3.10"

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"